[gd_scene load_steps=17 format=3 uid="uid://d048wjcw6oyni"]

[ext_resource type="Script" path="res://Scenes/Magic/Tier0/Fireball/fireball.gd" id="1_qiqvc"]
[ext_resource type="Texture2D" uid="uid://b3aai0dok23o8" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_3.png" id="2_jhvkc"]
[ext_resource type="Texture2D" uid="uid://dyhmjgwelhw6q" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_4.png" id="3_bkxby"]
[ext_resource type="Texture2D" uid="uid://bsyw4m5xoyfer" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_5.png" id="4_cr42r"]
[ext_resource type="Texture2D" uid="uid://cf2e4quxbn250" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_6.png" id="5_b50g5"]
[ext_resource type="Texture2D" uid="uid://mh5nq2cto55s" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_7.png" id="6_yly7a"]
[ext_resource type="Texture2D" uid="uid://bljv5xh77n7wb" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit1.png" id="7_usft3"]
[ext_resource type="Texture2D" uid="uid://cnunwevssqa4w" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit2.png" id="8_1kw0y"]
[ext_resource type="Texture2D" uid="uid://cdugnv5r834dj" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit3.png" id="9_x4sgt"]
[ext_resource type="Texture2D" uid="uid://16e5y4rnosb5" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit4.png" id="10_w0cna"]
[ext_resource type="Texture2D" uid="uid://owmwlck343r2" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit5.png" id="11_mdb5q"]
[ext_resource type="Texture2D" uid="uid://boiow60xw0rgl" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit6.png" id="12_fqtu3"]
[ext_resource type="Texture2D" uid="uid://d2ngex8ekgdtx" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit7.png" id="13_tx7kf"]
[ext_resource type="Texture2D" uid="uid://d03ahnf63ss8k" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/fireball/fireball_hit8.png" id="14_1d7tm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8tt21"]
size = Vector2(8, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_cg1b6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jhvkc")
}, {
"duration": 1.0,
"texture": ExtResource("3_bkxby")
}, {
"duration": 1.0,
"texture": ExtResource("4_cr42r")
}, {
"duration": 1.0,
"texture": ExtResource("5_b50g5")
}, {
"duration": 1.0,
"texture": ExtResource("6_yly7a")
}],
"loop": true,
"name": &"flying",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_usft3")
}, {
"duration": 1.0,
"texture": ExtResource("8_1kw0y")
}, {
"duration": 1.0,
"texture": ExtResource("9_x4sgt")
}, {
"duration": 1.0,
"texture": ExtResource("10_w0cna")
}, {
"duration": 1.0,
"texture": ExtResource("11_mdb5q")
}, {
"duration": 1.0,
"texture": ExtResource("12_fqtu3")
}, {
"duration": 1.0,
"texture": ExtResource("13_tx7kf")
}, {
"duration": 1.0,
"texture": ExtResource("14_1d7tm")
}],
"loop": true,
"name": &"hit",
"speed": 20.0
}]

[node name="Fireball" type="Area2D" groups=["spell"]]
collision_layer = 64
collision_mask = 51
script = ExtResource("1_qiqvc")
speed = 250
attack_power = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8tt21")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cg1b6")
animation = &"flying"
frame_progress = 0.107128

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
